--- a/MauiLayouts/Pages/GridDemoPage.xaml
+++ b/MauiLayouts/Pages/GridDemoPage.xaml
@@ -33,7 +33,7 @@
                VerticalOptions="Center" />
         <BoxView Grid.Row="2"
                  Grid.ColumnSpan="2"
-                 Color="Red" />
+                 Color="DeepSkyBlue" />
         <Label Grid.Row="2"
                Grid.ColumnSpan="2"
                Text="Row 2, Columns 0 and 1"
