--- a/MauiLayouts/Pages/BindingDemoPage.xaml
+++ b/MauiLayouts/Pages/BindingDemoPage.xaml
@@ -2,6 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiLayouts.BindingDemoPage"
+             xmlns:sys="clr-namespace:System;assembly=netstandard"
+             xmlns:converters="clr-namespace:MauiLayouts.Converters"
              xmlns:local="clr-namespace:MauiLayouts.ViewModels"
              Title="BindingDemoPage">
 
@@ -9,11 +11,20 @@
         <local:MainViewModel />
     </ContentPage.BindingContext>
     
-    <StackLayout Padding="20">
-        <Label Text="{Binding AppPublished, StringFormat='{0:dd-MM-yyyy}'}" />
+    <VerticalStackLayout Padding="20">
+        <VerticalStackLayout.Resources>
+            <ResourceDictionary>
+                <converters:DateTimeToDateOnlyConverter x:Key="DateTimeDateOnly"/>
+            </ResourceDictionary>
+        </VerticalStackLayout.Resources>
+        
+        <Label Text="Day of birth:"  />
+        <DatePicker Date="{Binding DayOfBirth, Mode=TwoWay, Converter={StaticResource Key=DateTimeDateOnly}}"
+                    MaximumDate="{x:Static sys:DateTime.Now }"/>
+        
         <Entry Text="{Binding SurName}" Placeholder="Enter surname" />
         <Entry Text="{Binding LastName}" Placeholder="Enter lastname" />
-        <Label Text="Font Size: "  />
+        <Label Text="Font Size:"  />
         <Slider x:Name="sliderFontSize"
                 Maximum="48"
                 Minimum="6"
@@ -28,5 +39,5 @@
                HorizontalOptions="Center"
                FontSize="{Binding Source={x:Reference sliderFontSize}, Path=Value}"
                Rotation="{Binding Source={x:Reference sliderRotate}, Path=Value}"/>
-    </StackLayout>
+    </VerticalStackLayout>
 </ContentPage>
